# exemplar

./: .CMakeUserPresets.json  .gitignore  CMakeLists.txt  GNUmakefile  lockfile.json
.github/workflows/: ci_tests.yml
cmake/: beman.exemplar-config.cmake.in  prelude.cmake
cmake/presets/: CMakeDarwinPresets.json
examples/: CMakeLists.txt
include/beman/exemplar/: CMakeLists.txt  identity.cppm  identity.hpp
infra/cmake/: use-fetch-content.cmake
src/beman/exemplar/: CMakeLists.txt
tests/beman/exemplar/: CMakeLists.txt
